# CosyVoice

./: README.md  example.py  pyproject.toml  webui.py
runtime/python/fastapi/: server.py
