[project]
name = "cosyvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "absl-py==2.4.0",
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.14.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "audioread==3.1.0",
    "beautifulsoup4==4.15.0",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "coloredlogs==15.0.1",
    "conformer==0.3.2",
    "contourpy==1.3.2",
    "cryptography==49.0.0",
    "cycler==0.12.1",
    "cython==3.2.6",
    "decorator==5.3.1",
    "deepspeed==0.15.1",
    "deepspeed==0.15.1 ; sys_platform == 'linux'",
    "diffusers==0.29.0",
    "einops==0.8.2",
    "einx==0.4.3",
    "exceptiongroup==1.3.1",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    "ffmpy==1.0.0",
    "filelock==3.29.4",
    "flatbuffers==25.12.19",
    "fonttools==4.63.0",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "fsspec==2024.12.0",
    "gdown==5.1.0",
    "google-auth==2.55.1",
    "google-auth-oauthlib==1.0.0",
    "gradio==5.4.0",
    "gradio-client==1.4.2",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.2",
    "humanfriendly==10.0",
    "hydra-core==1.3.2",
    "hyperpyyaml==1.2.3",
    "idna==3.18",
    "importlib-metadata==9.0.0",
    "inflect==7.3.1",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kaldifst==1.8.0",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "lightning-utilities==0.15.3",
    "llvmlite==0.47.0",
    "loguru==0.7.3",
    "markdown==3.10.2",
    "markdown-it-py==4.2.0",
    "markupsafe==2.1.5",
    "matplotlib==3.7.5",
    "mdurl==0.1.2",
    "modelscope==1.20.0",
    "more-itertools==11.1.0",
    "mpmath==1.3.0",
    "msgpack==1.2.1",
    "multidict==6.7.1",
    "networkx==3.1",
    "ninja==1.13.0",
    "numba==0.65.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-ml-py==13.610.43",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvtx-cu12==12.1.105",
    "oauthlib==3.3.1",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "onnxruntime==1.18.0 ; sys_platform == 'darwin' or sys_platform == 'win32'",
    "onnxruntime-gpu==1.18.0",
    "onnxruntime-gpu==1.18.0 ; sys_platform == 'linux'",
    "openai-whisper==20231117",
    "orjson==3.11.9",
    "packaging==24.2",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "platformdirs==4.10.0",
    "pooch==1.9.0",
    "propcache==0.5.2",
    "protobuf==4.25",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "pyarrow==18.1.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.7.0",
    "pydantic-core==2.18.1",
    "pydub==0.25.1",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.12",
    "pytorch-lightning==2.6.5",
    "pytz==2026.2",
    "pyworld==0.3.4",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "rich==13.7.1",
    "ruamel-yaml==0.18.17",
    "ruamel-yaml-clib==0.2.15",
    "ruff==0.15.20",
    "safehttpx==0.1.7",
    "safetensors==0.8.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "semantic-version==2.10.0",
    "setuptools==69.5.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soundfile==0.12.1",
    "soupsieve==2.8.4",
    "soxr==1.1.0",
    "starlette==0.41.3",
    "sympy==1.14.0",
    "tensorboard==2.14.0",
    "tensorboard-data-server==0.7.2",
    "tensorrt-cu12==10.13.3.9",
    "tensorrt-cu12==10.13.3.9 ; sys_platform == 'linux'",
    "tensorrt-cu12-bindings==10.13.3.9",
    "tensorrt-cu12-bindings==10.13.3.9 ; sys_platform == 'linux'",
    "tensorrt-cu12-libs==10.13.3.9",
    "tensorrt-cu12-libs==10.13.3.9 ; sys_platform == 'linux'",
    "threadpoolctl==3.6.0",
    "tiktoken==0.13.0",
    "tokenizers==0.21.4",
    "tomlkit==0.12.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchmetrics==1.9.0",
    "tqdm==4.68.3",
    "transformers==4.51.3",
    "triton==2.3.1",
    "typeguard==4.5.2",
    "typer==0.24.2",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uvicorn==0.30.0",
    "websockets==12.0",
    "werkzeug==3.1.8",
    "wetext==0.0.4",
    "wget==3.2",
    "wheel==0.47.0",
    "wheel-stub==0.5.0",
    "x-transformers==2.11.24",
    "yarl==1.24.2",
    "zipp==4.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
name = "onnxruntime-cuda12"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
